Detect new brand PolarLine and Detect devices for existing brands: ZTE, TCL, HTC, BDF, DEXP, OPPO, AT&T, Samsung, Ginzzu, Telefunken, Haier, DIXON, Soyes, Prestigio, Hisense, Rombica, NEXON, Irbis, Qilive, MyPhone  (#6910)
* feat(client) detect library: LUA OpenResty NGINX
feat(client) detect pim: Windows Mail
feat(bots) detect bot: Discord Bot

* feat(device) detect brand Ginzzu model: GT-X890
feat(device) detect brand ZTE model: Blade GF3 (T320)
feat(device) detect brand TCL models: 10L (T770B), 20L (T774H)
feat(device) detect brand HTC models: One Max (HTC0P3P7), Desire 530 (HTCD160LVWPP)
feat(device) detect brand Samsung models: Galaxy Tab 3 Lite 7.0" (SM-T111NQ), Galaxy Tab A 8.0" (2019) LTE (SM-T297),
 Galaxy S4 (SHV-E300K), Galaxy S4 LTE (SHV-E330S), Galaxy A11 (SM-S115DL), Galaxy M52 5G (SM-M526B), Galaxy M22(SM-M225FV),
 Galaxy S21 5G (SM-G991Q)

feat(device) added tests for brand Samsung models: Galaxy S20 Ultra 5G ()
feat(device) added tests for brand Huawei models: Ascend Mate 7 (MT7-TL10), Galaxy Note 4 (SM-N910V), Galaxy J7 (SM-J700H)

* feat(device) added tests for brand Samsung models: Galaxy S20+ 5G (SM-G986U1), Galaxy S20 5G (SM-G981U1)

* feat(device) detect brand Telefunken model: TEL-73GIQA
feat(device) detect brand Haier model: 2K Android TV
feat(device) detect brand DIXON model: Solis (HK7-3502)
feat(device) detect brand Soyes model: S10-H
feat(device) detect brand ZTE model: Blade L9
feat(device) detect brand OPPO model: A54s (CPH2273)

feat(device) added tests for brand Samsung models: Galaxy Z Fold 3 5G (SM-F926N), Galaxy A02 (SM-A022F), Galaxy A02s (SM-A025A)
feat(device) added tests for brand Apple model: iPhone X (iPhone10,6)
feat(app) detect app BBC News

* feat(device) detect brand Tecno Mobile model: Spark 7 (KF6)
feat(device) detect brand Prestigio model: Muze C3 (PSP3504DUO)
feat(device) detect brand Hisense model: Infinity E30 SE

feat(device) added tests for brand Hisense model: Infinity E30

* fe

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -181,7 +181,7 @@ HTC:
       model: 'Desire 626S'
     - regex: '0PCV1(?:[);/ ]|$)'
       model: 'Desire 510'
-    - regex: 'HTC ?D160LVW(?:[);/ ]|$)'
+    - regex: 'HTC ?D160LVW(?:PP)?(?:[);/ ]|$)'
       model: 'Desire 530'
     - regex: 'HTC[_ ]D310n(?:[);/ ]|$)'
       model: 'Desire 310'
@@ -223,7 +223,7 @@ HTC:
     - regex: 'HTC[ _-]Flyer[ _\-]([\w]{1,5})'
       device: 'tablet'
       model: 'Flyer $1'
-    - regex: 'HTC(?:[ _-])?(?:One[ _\-]max|6600LVW)(?:[);/ ]|$)'
+    - regex: 'HTC(?:[ _-])?(?:One[ _\-]max|6600LVW|0P3P7)(?:[);/ ]|$)'
       device: 'phablet'
       model: 'One Max'
     - regex: 'HTC[ _]([^/;]+) [0-9]+(?:\.[0-9]+)+ Build'
@@ -5144,7 +5144,7 @@ Desay:
 
 # DEXP (dexp.club)
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E210|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|355)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N180i|N380i|(?<!VOX )G450)(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E210|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|355)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N180i|N380i|(?<!VOX )G450|Q210)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -5175,7 +5175,7 @@ DEXP:
     - regex: 'Ursus[ _]([^;/)]+)(?: Build|[);])'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N180i|N380i|E1[78]0)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N180i|N380i|E1[78]0|Q210)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
@@ -6825,7 +6825,7 @@ Ginzzu:
   models:
     - regex: 'GINZZU[_ ]?(S40[17]0|S4710|ST60[14]0|ST6120)'
       model: '$1'
-    - regex: 'GINZZU[_ ]?(GT-(?:1050|7105|70[1-4]0|7115|7210|[WX]831|X[78]70|7810|8[01]10|X853))'
+    - regex: 'GINZZU[_ ]?(GT-(?:1050|7105|70[1-4]0|7115|7210|[WX]831|X[78]70|7810|8[01]10|X853|X890))'
       model: '$1'
       device: 'tablet'
     - regex: '(RS6[12]D) ULTIMATE'
@@ -7140,7 +7140,7 @@ Hafury:
     - regex: '(MIX|UMAX)'
       model: '$1'
 
-# Haier
+# Haier (www.haier.com)
 Haier:
   regex: 'Haier|I6_Infinity|Titan[ _]T[135]|(?:HW-)?W(?:71[67]|757|86[07]|970)(?:[);/ ]|$)|S5 Silk|(?:HM-)?(N505|N700|G(?:152|303|353|552|70[01])?-FL|HM-(?:I559|N501|I560|G553|N701)-FL|G(?:303)?-W|I(?:557)?-FL)|(?:PAD[ _](?:D71|G781|d85))|A2_Lite_NFC|HL810G'
   device: 'smartphone'
@@ -7175,6 +7175,9 @@ Haier:
     - regex: '(HL810G)'
       device: 'tablet'
       model: '$1'
+    - regex: 'haierATVnippori'
+      device: 'tv'
+      model: '2K Android TV'
     - regex: 'Haier[ _\-](H[WT]-[^/;]+) Build'
       model: '$1'
     - regex: 'Haier[ _\-](H[WT]-[a-z0-9_\-]+)'
@@ -7238,7 +7241,7 @@ Hisense:
       model: 'A6'
     - regex: 'HLTE730T'
       model: 'A6L'
-    - regex: 'HLTE221E'
+    - regex: 'HLTE221E|E MAX(?:[);/ ]|$)'
       model: 'E Max'
     - regex: 'HLTE501N'
       model: 'V Plus'
@@ -7301,6 +7304,8 @@ Hisense:
       model: 'U601S Pro'
     - regex: 'Infinity H50 ZOOM(?:[);/ ]|$)'
       model: 'Infinity H50 Zoom'
+    - regex: 'Infinity E30SE(?:[);/ ]|$)'
+      model: 'Infinity E30 SE'
     - regex: '(HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*)'
       model: '$1'
 
@@ -8306,7 +8311,7 @@ iRulu:
 
 # Irbis
 Irbis:
-  regex: 'IRBIS|TZ(1(?:0[04]|42|5[01]|84|65|7[01345-89]|8[356]|9[12578])|200|49|55|72|22|7(?:0[127]|1[1-4679]|2[021567]|3[025-8]|4[257]|5[23457]|6[12]|72|7[17]|8[1]|9[147])|8(?:[34]1|5[3-8]|6[2-5]|7[12478]|8[1-5]|9[0127])|96[0-9])|TZ85|TZ13|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))(?:[);/ ]|$)'
+  regex: 'IRBIS|TZ(1(?:0[04]|42|5[01]|84|65|7[01345-89]|8[356]|9[12578])|200|49|55|72|22|7(?:0[127]|1[1-4679]|2[021567]|3[025-8]|4[257]|5[23457]|6[12]|72|7[137]|8[1]|9[147])|8(?:[34]1|5[3-8]|6[2-5]|7[12478]|8[1-5]|9[0127])|96[0-9])|TZ85|TZ13|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))(?:[);/ ]|$)'
@@ -12391,6 +12396,8 @@ MyPhone:
       model: 'Cube LTE'
     - regex: 'Prime_4_Lite'
       model: 'Prime 4 Lite'
+    - regex: 'HAMMER[ _]ENERGY[ _](\d+)'
+      model: 'Hammer Energy $1'
     - regex: 'HAMMER[ _]ENERGY'
       model: 'Hammer Energy'
     - regex: 'HAMMER_AXE[_ ]M[_ ]LTE'
@@ -13514,6 +13521,8 @@ OPPO:
       model: 'A54 5G'
     - regex: 'CPH2239(?:[);/ ]|$)'
       model: 'A54'
+    - regex: 'CPH2273(?:[);/ ]|$)'
+      model: 'A54s'
     - regex: 'PEM[MT][02]0(?:[);/ ]|$)'
       model: 'A55 5G'
     - regex: '(?:OPPO[ _]?)?CPH170[15](?:[);/ ]|$)'
@@ -14081,11 +14090,13 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5087Z|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|9048S|A50[279]DL|T78[02]H|T770H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5087Z|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
       model: 'Gala G60'
+    - regex: 'T774H(?:[);/ ]|$)'
+      model: '20L'
     - regex: 'T775H(?:[);/ ]|$)'
       model: '20L Plus'
     - regex: '6125[FD](?:[);/ ]|$)'
@@ -14120,7 +14131,7 @@ TCL:
       model: 'LX'
     - regex: 'A507DL(?:[);/ ]|$)' # TracFone A507DL
       model: 'A2'
-    - regex: 'T770H(?:[);/ ]|$)'
+    - regex: 'T770[HB](?:[);/ ]|$)'
       model: '10L'
     - regex: 'T766[AHJU](?:_(?:EEA|RU))?(?:[);/ ]|$)'
       model: '10 SE'
@@ -14374,7 +14385,7 @@ Rombica:
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
-    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
+    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001|B1))(?:[);/ ]|$)'
       model: '$1'
 
 # Rover
@@ -14611,6 +14622,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T307U(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A 8.4" (2020) LTE'
+    - regex: '(?:SAMSUNG-)?SM-T297'
+      device: 'tablet'
+      model: 'Galaxy Tab A 8.0" (2019) LTE'
     - regex: '(?:SAMSUNG-)?SM-(?:T505[CN]?|T507)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A7 10.4" (2020) LTE'
@@ -14659,7 +14673,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T866N(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S6 10.5" 5G'
-    - regex: '(?:SAMSUNG-)?SM-T111[M]?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-T111'
       device: 'tablet'
       model: 'Galaxy Tab 3 Lite 7.0"'
     - regex: '(?:SAMSUNG-)?SM-T116(?:BU|NU|NY)?'
@@ -15027,10 +15041,12 @@ Samsung:
       model: 'Galaxy S III'
     - regex: '(?:SAMSUNG-)?(?:GT-I9305|SCH-R530)'
       model: 'Galaxy S III LTE'
-    - regex: '(?:SAMSUNG-)?(?:SM-S975L|GT-I950[025]|SC-04E|SCH-(?:I545|I959|R970)|SGH-M919N?|Galaxy-S4)'
+    - regex: '(?:SAMSUNG-)?(?:SM-S975L|GT-I950[025]|SC-04E|SCH-(?:I545|I959|R970)|SGH-M919N?|Galaxy-S4|SHV-E300K)'
       model: 'Galaxy S4'
-    - regex: '(?:SAMSUNG-)?GT-I9506'
+    - regex: '(?:SAMSUNG-)?(?:GT-I9506)'
       model: 'Galaxy S4 with LTE+'
+    - regex: '(?:SAMSUNG-)?SHV-E330'
+      model: 'Galaxy S4 LTE'
     - regex: '(?:SAMSUNG-)?GT-S5280'
       model: 'Galaxy STAR'
     - regex: '(?:SAMSUNG-)?GT-S5301'
@@ -15199,7 +15215,7 @@ Samsung:
       model: 'Galaxy S20+'
     - regex: '(?:SAMSUNG-)?SM-G986(?:U1|[0BNUW])|SC-52A'
       model: 'Galaxy S20+ 5G'
-    - regex: '(?:SAMSUNG-)?SM-G991(?:U1|[0BNW])|SCG09'
+    - regex: '(?:SAMSUNG-)?SM-G991(?:U1|[0BNWQ])|SCG09'
       model: 'Galaxy S21 5G'
     - regex: '(?:SAMSUNG-)?SC-51B'
       model: 'Galaxy S21 5G Olympic Games Edition'
@@ -15229,14 +15245,16 @@ Samsung:
       model: 'Galaxy A01'
     - regex: '(?:SAMSUNG-)?SM-A013[FGM]'
       model: 'Galaxy A01 Core'
-    - regex: '(?:SAMSUNG-)?SM-A025(?:[FGM]|AZ)?'
+    - regex: '(?:SAMSUNG-)?SM-A025(?:[AFGM]|AZ)?'
       model: 'Galaxy A02s'
     - regex: '(?:SAMSUNG-)?SM-A037[F]?'
       model: 'Galaxy A03s'
-    - regex: '(?:SAMSUNG-)?SM-A022[GM]'
+    - regex: '(?:SAMSUNG-)?SM-A022[GMF]?'
       model: 'Galaxy A02'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'Galaxy A2 Core'
+    - regex: '(?:SAMSUNG-)?SM-S115(?:DL)?'
+      model: 'Galaxy A11'
     - regex: '(?:SAMSUNG-)?SM-A225[F]?'
       model: 'Galaxy A22'
     - regex: '(?:SAMSUNG-)?SM-A226'
@@ -15507,6 +15525,8 @@ Samsung:
       model: 'Galaxy M21'
     - regex: '(?:SAMSUNG-)?SM-M215G'
       model: 'Galaxy M21 (2021)'
+    - regex: '(?:SAMSUNG-)?SM-M225'
+      model: 'Galaxy M22'
     - regex: '(?:SAMSUNG-)?SM-(?:M307(?:FN|[0F])|M30s)'
       model: 'Galaxy M30s'
     - regex: '(?:SAMSUNG-)?SM-M305?'
@@ -15523,6 +15543,8 @@ Samsung:
       model: 'Galaxy M42 5G'
     - regex: '(?:SAMSUNG-)?SM-M515F'
       model: 'Galaxy M51'
+    - regex: '(?:SAMSUNG-)?SM-M526'
+      model: 'Galaxy M52 5G'
     - regex: '(?:SAMSUNG-)?SM-M625'
       model: 'Galaxy M62'
     - regex: '(?:SAMSUNG-)?SM-W201([689])'
@@ -16453,7 +16475,7 @@ Prestigio:
     - regex: 'PSP7510DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C7 LTE'
-    - regex: 'Muze C3(?:[);/ ]|$)'
+    - regex: '(?:Muze C3|PSP3504DUO)(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
     - regex: 'PSP3512DUO(?:[);/ ]|$)'
@@ -16542,7 +16564,7 @@ Sanyo:
 
 # Qilive
 Qilive:
-  regex: 'Qilive [0-9][^;/]*|Q(7S5[5]?IN4G|7T10INP|8T10IN|8S55IN4G2|8S[56]IN4G|9T9IN|9T(?:7|10)IN4G|9S55IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
+  regex: 'Qilive [0-9][^;/]*|Q(7S5[5]?IN4G|7T10INP|T19101HV|8T10IN|8S55IN4G2|8S[56]IN4G|9T9IN|9T(?:7|10)IN4G|9S55IN4G|10S5[37]IN4G|10S[56]IN4G|10S[56]IN4GR|9S5IN4G|6T7IN)'
   device: 'smartphone'
   models:
     - regex: 'Q7S5IN4G'
@@ -16584,6 +16606,9 @@ Qilive:
       device: 'tablet'
     - regex: 'Q9T10IN4G'
       model: 'Q9 10.1" 4G'
+      device: 'tablet'
+    - regex: '(QT19101HV)'
+      model: '$1'
       device: 'tablet'
     - regex: 'Qilive ([0-5][^;/]*) Build'
       model: '$1'
@@ -17479,7 +17504,7 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
-    - regex: 'TECNO[ _]KF6[nmjk](?:[);/ ]|$)'
+    - regex: 'TECNO[ _]KF6[nmjk]?(?:[);/ ]|$)'
       model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
@@ -17714,13 +17739,15 @@ teXet:
 
 # Telefunken
 Telefunken:
-  regex: 'TELEFUNKEN|Foxtrot|TEL-1013GIQA|TEL-1014GIQ|TF-SP(?:500[12]|4002)|(TF-MID(?:[78]02G|70[78]G|80[46]G|9705RG|9707G|7805G|100[57]G|1010G))|(TF-LED(?:65S75T2SU|32S39T2S|32S5[289]T2S|32S70T2S|40S63T2S))|LTE_LIMA|LTE Mike'
+  regex: 'TELEFUNKEN|Foxtrot|TEL-1013GIQA|TEL-1014GIQ|TEL-73GIQA|TF-SP(?:500[12]|4002)|(TF-MID(?:[78]02G|70[78]G|80[46]G|9705RG|9707G|7805G|100[57]G|1010G))|(TF-LED(?:65S75T2SU|32S39T2S|32S5[289]T2S|32S70T2S|40S63T2S))|LTE_LIMA|LTE Mike'
   device: 'tablet'
   models:
     - regex: 'TEL-1013GIQA'
       model: 'Giqa 10.1 3G'
     - regex: 'TEL-1014GIQ'
       model: 'TEL-1014GIQ'
+    - regex: 'TEL-73GIQA'
+      model: 'TEL-73GIQA'
     - regex: 'Foxtrot2'
       model: 'Foxtrot 2'
       device: 'smartphone'
@@ -20440,6 +20467,8 @@ ZTE:
       model: 'Blade Q+'
     - regex: 'Blade Q Lux(?:[);/ ]|$)'
       model: 'Blade Q Lux'
+    - regex: 'ZTE T320(?:[);/ ]|$)'
+      model: 'Blade GF3'
     - regex: 'N9515(?:[);/ ]|$)'
       model: 'Warp Sync'
     - regex: 'N9519(?:[);/ ]|$)'
@@ -20522,16 +20551,12 @@ ZTE:
       model: 'Blade L4 Pro'
     - regex: '(?:Blade L5 Plus|BLADE L0510)(?:[);/ ]|$)'
       model: 'Blade L5 Plus'
-    - regex: 'Blade L5(?:[);/ ]|$)'
-      model: 'Blade L5'
     - regex: 'Blade L6(?:[);/ ]|$)'
       model: 'Blade L6'
     - regex: 'Blade L7A(?:[);/ ]|$)'
       model: 'Blade L7A'
-    - regex: 'Blade L7(?:[);/ ]|$)'
-      model: 'Blade L7'
-    - regex: 'Blade L8(?:RU)?(?:[);/ ]|$)'
-      model: 'Blade L8'
+    - regex: 'Blade L(\d+)(?:RU)?'
+      model: 'Blade L$1'
     - regex: 'Blade A([357]) (20(?:19|20))'
       model: 'Blade A$1 ($2)'
     - regex: 'ZTE BV0720(?:[);/ ]|$)'
@@ -21122,10 +21147,10 @@ Shuttle:
 
 # BDF
 BDF:
-  regex: '(BDF[- ](?:819|P10|K107H|KT107|MT6753|X20)|K960N_MT(?:6580|6753)(?:_32_N)?)(?:[);/ ]|$)'
+  regex: '(?:BDF[- ](?:819|P10|M107|K107H|KT107|MT6753|X20)|K960N_MT(?:6580|6753)(?:_32_N)?)(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: 'BDF[- ](819|P10|K107H|KT107|MT6753|X20)(?:[);/ ]|$)'
+    - regex: 'BDF[- ](819|P10|M107|K107H|KT107|MT6753|X20)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'K960N_MT(6580|6753)(_32_N)?(?:[);/ ]|$)'
       model: 'BK960N MT$1'
@@ -21575,11 +21600,13 @@ Divisat:
 
 # DIXON (https://www.dixoninfo.com/)
 DIXON:
-  regex: 'DIXON_|(?:ACK1010|KT5512)(?:[);/ ]|$)'
+  regex: 'DIXON_|(?:ACK1010|KT5512|HK7-3502)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(ACK1010|KT5512)'
       model: '$1'
+    - regex: 'HK7-3502'
+      model: 'Solis'
     - regex: 'DIXON_XK1_3G(?:[);/ ]|$)'
       device: 'feature phone'
       model: 'XK1 3G'
@@ -21689,9 +21716,13 @@ Uhans:
 
 # Soyes
 Soyes:
-  regex: 'SOYES[ _]([67]S|XS)(?:[);/ ]|$)'
+  regex: '(?:SOYES[ _](?:[67]S|XS)|S10-H)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: 'SOYES[ _]([67]S|XS)'
+      model: '$1'
+    - regex: 'S10-H'
+      model: 'S10-H'
 
 # Zidoo
 Zidoo:
@@ -21806,7 +21837,7 @@ Wigor:
 
 # NEXON (nexon.ua)
 NEXON:
-  regex: 'NEXON (X[12589])(?:[);/ ]|$)'
+  regex: 'NEXON (X3\+|X[12589])(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
@@ -22337,7 +22368,7 @@ Tone:
 
 # AT&T
 AT&T:
-  regex: '(?:U304AA|QS5509A|U705AA|U318AA|V350U)(?:[);/ ]|$)'
+  regex: '(?:U(?:304|202|705|318)AA|QS5509A|V350U)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'U304AA(?:[);/ ]|$)'
@@ -22350,6 +22381,8 @@ AT&T:
       model: 'Calypso'
     - regex: 'V350U(?:[);/ ]|$)'
       model: 'Maestro Plus'
+    - regex: 'U202AA(?:[);/ ]|$)'
+      model: 'Maestro'
 
 # BIHEE
 BIHEE:
@@ -25748,6 +25781,12 @@ Glofiish:
 # Polar (polar.ru)
 Polar:
   regex: 'Polar[_ ](P24L51T2CSM)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
+
+# Polarline (sub brand Polar)
+PolarLine:
+  regex: 'PolarLine[_ ](32PL13TC-SM)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
