feat(device) detect brand Blackview model: BV9900E
feat(device) added test for brand Medion model: Lifetab P1071X
feat(device) added test for brand Blackview model: BV6000S
feat(device) added test for brand Samsung model: Galaxy J7 Prime (SM-G610Y)
feat(device) added test for brand Vertex models: Impress Reef, Impress Saturn

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3161,7 +3161,7 @@ Blackview:
     - regex: '(BV6[13]00)(?:[);/ ]|$)'
       model: '$1'
       device: 'phablet'
-    - regex: '(BV([24-9]000|6[69]00|4900|9600E|(5[1589]|9[15689])00)(?:[ _](?:PRO))?)'
+    - regex: '(BV([24-9]000|6[69]00|4900|9[69]00E|(5[1589]|9[15689])00)(?:[ _](?:PRO))?)'
       model: '$1'
     - regex: '(P10000(?:[ _](?:PRO))?)'
       model: '$1'
