--- a/Tests/fixtures/peripheral.yml
+++ b/Tests/fixtures/peripheral.yml
@@ -282,3 +282,21 @@
     model: TPS320
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; DT40) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: peripheral
+    brand: Urovo
+    model: DT40
+  os_family: Android
+  browser_family: Chrome
